product colection overlaping fix

--- a/assets/style.css
+++ b/assets/style.css
@@ -2319,7 +2319,7 @@ height: 50px;
   @media(max-width:767px){
     .product-colection{
       text-align: center;
-      max-width: 100%;
+      max-width: 100% !important;
     }
   }
 .product-variant-option  .select-variant{
